# silabs-data

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  d  deploy.sh  rust-toolchain.toml
data/registers/: acmp_v2.yaml  amuxcp_v2.yaml  buram_v0.yaml  burtc_v1.yaml  cmu_v3.yaml  cmu_v7.yaml  dcdc_v2.yaml  devinfo_v0_mg24.yaml  devinfo_v0_mg26.yaml  dmem_v2.yaml  dmem_v2_ws.yaml  dpll_v1.yaml  emu_v3.yaml  eusart_v2.yaml  eusart_v2_lf.yaml  fsrco_v0.yaml  gpcrc_v0.yaml  gpio_v3.yaml  gpio_v7.yaml  hfrco_v2.yaml  hfrcoem_v2.yaml  hfxo_v3.yaml  hostmailbox_v0.yaml  i2c_v0.yaml  iadc_v3.yaml  iadc_v3_ha.yaml  icache_v0.yaml  keyscan_v1.yaml  lcd_v3.yaml  lcdrf_v0.yaml  ldma_v0.yaml  ldmaxbar_v3.yaml  ldmaxbar_v7.yaml  letimer_v1.yaml  lfrco_v2.yaml  lfxo_v1.yaml  msc_v3.yaml  msc_v9.yaml  mvp_v1.yaml  mvp_v2.yaml  (+32 more)
silabs-data-gen/: Cargo.toml
silabs-data-gen/src/: chip_json.rs  chips.rs  header.rs  lib.rs  main.rs  pack.rs  pdsc.rs  perimap.rs  svd.rs
silabs-data-gen/tests/: cross_family_sharing.rs  parses_pdsc.rs  peripheral_versions.rs  svd_fingerprint.rs
silabs-data-gen/tests/fixtures/: eusart0_min.svd  mg24_subset.svd  mg26_min.pdsc  mg26_subset.svd  peripheral_versions.svd
silabs-metapac-gen/: Cargo.toml
silabs-metapac-gen/res/: metadata.rs
silabs-metapac-gen/src/: codegen.rs  crate_layout.rs  expand_aliases.rs  extract.rs  ir_metadata.rs  kind.rs  lib.rs  main.rs  pac.rs  peripheral.rs  registers.rs
silabs-metapac-gen/static/: metadata.rs
silabs-metapac-gen/tests/: codegen_smoke.rs
silabs-metapac-gen/tests/fixtures/: gpio_smoke.svd  mg26_smoke.svd
transforms/: GPIO.yaml
