[workspace]
resolver = "2"
members = ["silabs-data-gen", "silabs-metapac-gen"]
exclude = ["examples/hello-mg26", "examples/hello-mg24", "build/silabs-metapac"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andresv/silabs-data"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
anyhow = "1"
chiptool = { git = "https://github.com/andresv/chiptool.git", rev = "cab99e1aef4ebda9ee5368e6cb0dff571050f04b" }
svd-parser = { git = "https://github.com/embassy-rs/svd.git", rev = "f4f192d083946fc6227db7ac17eba8aa58bb9d4c", features = ["derive-from", "expand"] }
# `serde_yaml` is unmaintained; upstream chiptool pins this exact published version.
# Match it here so Cargo's resolver sees a single version across the workspace.
serde_yaml = "=0.9.34-deprecated"
quote = "1"
proc-macro2 = "1"
regex = "1"
convert_case = "0.11"
