[package]
name = "silabs-data-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "silabs-data-gen"

[dependencies]
clap.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zip.workspace = true
anyhow.workspace = true
regex.workspace = true
