[package]
name = "silabs-metapac-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zip.workspace = true
anyhow.workspace = true
chiptool.workspace = true
svd-parser.workspace = true
serde_yaml.workspace = true
quote.workspace = true
proc-macro2.workspace = true
convert_case.workspace = true
silabs-data-gen = { path = "../silabs-data-gen" }
